--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.486.0",
     "motion": "^12.23.0",
+    "ogl": "^1.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
